--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 $primary-color: #2fa8cc;
-$secondary-color: #f4f4f4;
+$secondary-color: white;
 $box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
 
 * {
@@ -40,6 +40,7 @@ h3 {
 img {
   width: 100px;
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .joke {
